# Terms-AI

./: README.md  main.py  pyproject.toml  tems_ai.ipynb
.devcontainer/: devcontainer.json
terms_ai/: graph.py  instructions.py  nodes.py  planner.py  schema.py
